# AIEBaB-fail-forward

./: .gitignore  README.md  app.py  database.py  lab_data.db  lab_inventory.db  main.py  protocol_data.json  pyproject.toml  requirements-uv.txt  requirements.txt  search.py  test.csv  utils.py
DATA_FILES/: NEW_FG_protein_data_1 (1).xlsx  NEW_protein_expression_data_2 (1).xlsx  Sucess_Failure_Hemagglutinin.xlsx  protein_expression_data_2.xlsx
src/: app.py  database.py  search.py  success-model.ipynb  utils.py
