[project]
name = "aiebab-fail-forward"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pymc>=5.26.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
]
